objects/MDPERSONATOR__MD_MatchUpWrapper__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__City__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Company__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DupeCount__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>DupeCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DupeGroup__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>DupeGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Email__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FirstName__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastName__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Phone__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostalCode__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RecordID__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>RecordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__State__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Street__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MD_MatchUpWrapper</label>
    <nameField>
        <label>MD_MatchUpWrapper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_MatchUpWrappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>